--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@
 /var/sessions/*
 !var/sessions/.gitkeep
 !var/SymfonyRequirements.php
+!var/bootstrap.php.cache
 /vendor/
 /public_html/bundles/
 /public_html/uploads/
